# task-tracker

./: .coveragerc  .eslintrc.json  .gitignore  .gitmodules  Dockerfile  Makefile  Plan.md  README.md  TODO.md  TODO.txt  app.py  docker-compose.yml  entrypoint.sh  karma.conf.js  package.json  prepros.config  pyproject.toml  requirements.txt  server.py  todo.txt  todotxt.py  todotxt_test.py
static/: utils.js  whiteboard.css  whiteboard.css.map  whiteboard.js  whiteboard.scss
static/tests/: whiteboard-test.js
templates/: index.html
whiteboard/: whiteboard.vue
